# EducationalAlphaZero

./: CMakeLists.txt  LICENSE
include/: TicTacToe.hpp  game.hpp  mcts.hpp  network.hpp
src/: TicTacToe.cpp  main.cpp  mcts.cpp  network.cpp
